# lvgl_port

./: CMakeLists.txt  README.md  main.c  main.py  make.py  xmake.lua
components/: CMakeLists.txt
components/pocketpy/: CMakeLists.txt  app_pocketpy.c  app_pocketpy.h  pocketpy.c
components/pocketpy/modules/lvgl_pocketpy/: lv_pocketpy.c  lv_pocketpy.h  lv_pocketpy_btn.c
components/pocketpy/modules/python/lvgl/: __init__.pyi
lvgl/src/draw/sdl/: lv_draw_sdl.c
lvgl_port/: CMakeLists.txt
lvgl_port/inc/: lv_conf.h
lvgl_port/inc/sdl/: lv_sdl_conf.h  sdl.h
lvgl_port/include/lvgl_port/: lv_conf.h  lv_port.h
lvgl_port/include/lvgl_port/sdl/: lv_sdl_conf.h  sdl.h
lvgl_port/src/: lv_port_disp.c  lv_port_indev.c  mouse_cursor_icon.c
lvgl_port/src/sdl/: sdl.c
port/: lv_port.h  lv_port_disp.c
port/sdl/: lv_sdl_conf.h  sdl.c  sdl.h
